--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       function init() {
         scene = new THREE.Scene();
         scene.background = new THREE.Color(0.8, 0.8, 0.8);
-        //camera = new THREE.OrthographicCamera( window.innerWidth / - 2, window.innerWidth / 2, window.innerHeight / 2, window.innerHeight / - 2, 1, 1000 );
         camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
         camera.position.z = 100;
 
@@ -54,7 +53,7 @@
 
           mesh.traverse((child) => {
             if (child instanceof THREE.Mesh) {
-              console.log(child);
+              //console.log(child);
               child.material.opacity = 0.2
               if (child.name === "mesh_9") {
                 child.material.color = {
@@ -75,6 +74,7 @@
           scene.add(mesh);
           animate();
         });
+      }
 
       function animate() {
         requestAnimationFrame(animate);
