--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js"></script>
     <script type="module">
       import * as THREE from '/three.js-master/build/three.module.js';
       import {GLTFLoader} from '/three.js-master/examples/jsm/loaders/GLTFLoader.js';
@@ -24,6 +25,8 @@
         camera,
         renderer,
         controls;
+
+      var stats = new Stats();
 
       function init() {
         scene = new THREE.Scene();
@@ -39,7 +42,16 @@
 
         renderer = new THREE.WebGLRenderer({antialias: true});
         renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.domElement.appendChild(stats.domElement);
         document.body.appendChild(renderer.domElement);
+
+        stats.setMode(0);
+        stats.showPanel(0);
+        stats.domElement.style.position = 'absolute';
+        stats.domElement.style.left = '0';
+        stats.domElement.style.top = '0';
+        
+        document.body.appendChild( stats.domElement );
 
         controls = new OrbitControls(camera, renderer.domElement);
         controls.maxDistance = 200.0;
@@ -80,6 +92,7 @@
         requestAnimationFrame(animate);
         controls.update();
         renderer.render(scene, camera);
+        stats.update();
       }
 
       function onWindowResize() {
